# opensim-collections

./: 7unzip-oars.py  MyRegionGenerator.py  SIM_COMMANDS.md  SIM_COMMANDS2.md  SelectOARShader.cs  Startup.sh  Tornado-Mysql.py  errors1.txt  mesh-collada.md  mysql-insert.py  pycollada_example.py  region-updates.txt  rssfeed.cs  ruby-sqlite3.rb  stream_list.xml  subproces_7zip.py  working-protoc.md  xml2dict.py  xml2proto  xml_converter2.py
py_opensim_tools/: RegionBuilder.py  TornadoServer.py  full_backup.txt  pyproject.toml  setpassword.py  test_interact_api.py
py_opensim_tools/LSL/: say.cs  translate.cs
py_opensim_tools/LSL_AJAX/: URL_load_onclick.lsl  ajax_crossdomain.lsl  backup_region.lsl  get_position.lsl  get_prim_uuid.lsl  mrm_extended.lsl  mrm_httprequest_script.lsl  mrm_httprequest_script2.lsl  mrm_inworld_create.lsl  mrm_ownercreator.lsl  mrm_receive.lsl  mrm_request.lsl  mrm_script.lsl  mrm_send.lsl  mrm_touchevents.lsl  mrm_webservice.lsl  simple_menu.lsl  water_level.lsl  youtube_player.lsl
py_opensim_tools/LSL_SCRIPTS/: 3D_radar.lsl  MakeMap.lsl  MakeMapBlitPrim.lsl  MakeMapPrim.lsl  MapBlip.lsl  ODE_car.lsl  access_lists.lsl  automate_light.lsl  basic_dialog.lsl  basic_gun.lsl  bezier_curves.lsl  broken_fluorecent_tube.lsl  butterflies.lsl  change_color_touch.lsl  copy_to_inventory.lsl  detecting_prim_events.lsl  draw_on_prim.lsl  draw_on_prim2.lsl  driveable_box.lsl  dynamic_camera.lsl  geodesic_dome.lsl  give_all_contents.lsl  give_all_contents_plus.lsl  glow_script.lsl  graffitti_board.lsl  graffitti_board2.lsl  grid_name_script.lsl  (+34 more)
(+125 files in other folders)
