[project]
name = "pyopensimtools"
version = "0.1.0"
description = ""
authors = [
    {name = "dmc2025"}
]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "image (>=1.5.33,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "tornado (>=6.5,<7.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
